--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -24,3 +24,20 @@ body {
     }
   }
 }
+
+.carousel-container button[data-direction=left], .carousel-container button[data-direction=right] {
+  background: url(https://cdn.dsmcdn.com/web/production/slick-arrow.svg) 50% no-repeat;
+  border: none;
+  cursor: pointer;
+  height: 80px;
+  outline: 0;
+  position: relative;
+  top: 30px;
+  width: 20px;
+  opacity: 0.5; 
+}
+
+.carousel-container button[data-direction=left] {
+  left: -16px;
+  transform: rotate(180deg);
+}
