--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,6 +44,11 @@ body {
   transition: .5s;
 }
 
+.boxshadow-animation:hover {
+  box-shadow: 0 5px 15px rgb(0 0 0 / 35%);
+  transition: .2s;
+}
+
 /* responsive */
 
 @media only screen and (max-width: 1228px) {
