Responsive and close modal menu after click next/link

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -100,6 +100,12 @@ body {
     margin-bottom: 50px !important;
   }
 }
+@media only screen and (max-width: 640px) {
+  .verticalFutureRow-imgCont {
+    display: none;
+  }
+}
+
 
 @media only screen and (max-width: 605px) {
   .teamIT-container {
