--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -89,8 +89,12 @@ body {
   .teamBannerContent {
     flex-direction: column !important;
   }
+  .teamBannerContainer {
+    height: 400px !important;
+  }
   .teamBannerText {
-    font-size: 6pt !important;
+    width: 70vw !important;
+    margin-right: unset !important;
   }
   .teamManagementItem-container {
     flex-direction: column !important;
@@ -141,7 +145,9 @@ body {
     width: unset !important;
   }
   .teamBannerContainer {
-    height: 350px !important;
+    height: 460px !important;
+  }
+  .teamBannerText {
   }
 }
 
