--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -49,12 +49,22 @@ body {
   transition: .2s;
 }
 
+.verticalFeatureRow-text {
+  margin-top: -56px;
+}
+
 /* responsive */
 
 @media only screen and (max-width: 1228px) {
   .section-container {
     margin-left: 0 !important;
     margin-right: 0 !important;
+  }
+}
+
+@media only screen and (max-width: 1024px){
+  .verticalFeatureRow-text {
+    margin-top: -38px;
   }
 }
 
@@ -102,6 +112,9 @@ body {
   }
   .teamManagementItem-imageContainer {
     margin-bottom: 50px !important;
+  }
+  .verticalFeatureRow-text {
+    margin-top: 0px;
   }
 }
 @media only screen and (max-width: 640px) {
