--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -7,6 +7,7 @@
 html,
 body {
   font-size: 18px;
+  overflow-x: hidden;
 }
 
 @tailwind utilities;
@@ -60,6 +61,14 @@ body {
 .image-gray-filter {
   filter: grayscale(1);
   transition: 1s;
+}
+
+.transition-30s {
+  transition: 30s;
+}
+
+.transition-2s {
+  transition: .5s;
 }
 
 
