Main page banner mobile

--- a/website/src/styles/global.css
+++ b/website/src/styles/global.css
@@ -131,6 +131,11 @@ body {
   .teamManagementItem-imageContainer {
     margin-bottom: 50px !important;
   }
+
+  .vertical-feature-class {
+    box-shadow: unset !important;
+    padding-bottom: unset !important;
+  }
 }
 
 @media only screen and (min-width: 768px){ 
